--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,9 +7,7 @@
     height: 100px;
 }
 
-.search {
-    /* display: flex; */
-} 
+
 
 h1 {
     text-align: center;
@@ -22,10 +20,11 @@ h1 {
     width: 200px;
     margin: 5px;
     height: 25px;
+    margin-bottom: 10px;
 }
 
 .btn {
-    padding: 6px 85px;
+    padding: 6px 86px;
     background-color: rgb(72, 167, 236);
     display: flex;
     border: none;
@@ -35,10 +34,17 @@ h1 {
     border-radius: 4px;
     cursor: pointer;
     margin: 5px;
+    margin-bottom: 15px;
 
 }
 
 .presist {
     border-top: 2px solid black;
-    width: 100px;
+    width: 207px;
+    margin: 5px;
+    
+}
+
+ul {
+    list-style: none;
 }
