--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,26 +5,31 @@
     background-image:linear-gradient(to right, rgb(57, 123, 194), rgb(19, 5, 73)); 
     width: 100%;
     height: 100px;
+
 }
 
-
+.cont {
+    display: flex;
+}
 
 h1 {
     text-align: center;
     padding: 30px;
     color: white;
     border-radius: 4px;
+    display: block;
 }
 
 .srchBar {
-    width: 200px;
+    width: 258px;
     margin: 5px;
-    height: 25px;
+    height: 30px;
     margin-bottom: 10px;
+    font-size: larger;
 }
 
 .btn {
-    padding: 6px 86px;
+    padding: 6px 116px;
     background-color: rgb(72, 167, 236);
     display: flex;
     border: none;
@@ -40,7 +45,7 @@ h1 {
 
 .presist {
     border-top: 2px solid black;
-    width: 207px;
+    width: 266px;
     margin: 5px;
     
 }
@@ -48,3 +53,26 @@ h1 {
 ul {
     list-style: none;
 }
+
+.mainCast {
+    border: 2px solid black;
+    height: 300px;
+    width: 1100px;
+    position: relative;
+    left: 300px;
+    bottom: 150px;
+    display: flex;
+}
+
+.card{
+    position: relative;
+    height: 280px;
+    width: 200px;
+    background-color: #33475b;
+    left: 137px;
+    bottom: 100px;
+    margin: 13px;
+}
+
+
+
