--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,5 +74,30 @@ ul {
     margin: 13px;
 }
 
+h3 {
+    display: block;
+    position: relative;
+    bottom: 150px;
+    left: 300px;
+}
+
+.main {
+    color: black;
+    margin-top: 20px;
+    position: relative;
+    font-size: 26px;
+    top: 60px;
+    right: 30px;
+}
+
+.side{
+    color: white;
+    font-size: 22px;
+    margin-top: 10px;
+    position: relative;
+    top: 150px;
+    right: 20px;
+}
+
 
 
